# elastic-stack-study

./: .env.example  .gitignore  REAMDE.md  docker-compose.yaml
app/: .pdm.toml  Dockerfile  pyproject.toml
app/blog/: db.sqlite3
app/blog/blog/: querysets.py  settings.py
app/blog/posts/: admin.py  models.py  views.py
app/blog/posts/migrations/: 0001_initial.py
app/blog/templates/: base.html
beats/apm/: apm-server.yaml
beats/metric/: metricbeat.yaml
elasticsearch_data/nodes/0/_state/: _7p.cfe  _7p.cfs  _7p.si  _7p_1.liv  _7q.cfe  _7q.cfs  _7q.si  node-11.st  segments_87
elasticsearch_data/nodes/0/indices/-LmegNqwTSua1MGt6FCEfA/_state/: state-19.st
elasticsearch_data/nodes/0/indices/1apRRTzHSE-fvJEoJbyiQA/_state/: state-20.st
elasticsearch_data/nodes/0/indices/BO2XFy6wTEuRfeU8vBxSCw/_state/: state-20.st
elasticsearch_data/nodes/0/indices/ILSrqZDgS-mWgvFcO_AdAg/0/index/: _8.cfe  (+35 more)
elasticsearch_data/nodes/0/indices/ILSrqZDgS-mWgvFcO_AdAg/_state/: state-17.st
elasticsearch_data/nodes/0/indices/NYHZ__D7T-6TzVbx3WN_fQ/_state/: state-23.st
elasticsearch_data/nodes/0/indices/PcQaD0bqQweFe7LldYDrmg/_state/: state-24.st
elasticsearch_data/nodes/0/indices/QHq-EX6HRmiMBleGnIy0Wg/_state/: state-15.st
elasticsearch_data/nodes/0/indices/S4qcRe2eSkSUTg6vwy3nwQ/_state/: state-13.st
elasticsearch_data/nodes/0/indices/UymTJninTPyM5h5eZ0eCOg/_state/: state-25.st
elasticsearch_data/nodes/0/indices/_G-gjshfTnWCaExNkw07zA/_state/: state-20.st
elasticsearch_data/nodes/0/snapshot_cache/: segments_c
nginx/: Dockerfile  default.conf  entrypoint.sh  filebeat.yml
(+300 files in other folders)
